# ChangeLog for lxqt-base/lxqt-meta
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-meta/ChangeLog,v 1.10 2015/03/15 03:16:22 yngwin Exp $

*lxqt-meta-0.9.0-r2 (15 Mar 2015)

  15 Mar 2015; Ben de Groot <yngwin@gentoo.org> +lxqt-meta-0.9.0-r2.ebuild,
  metadata.xml:
  Add dependencies for oxygen-icons (bug #528676) and virtual/ttf-fonts, as they
  are expected in the default install.

*lxqt-meta-0.9.0-r1 (20 Feb 2015)

  20 Feb 2015; Ben de Groot <yngwin@gentoo.org> +lxqt-meta-0.9.0-r1.ebuild:
  update due to lxqt-common version bump

*lxqt-meta-0.9.0 (10 Feb 2015)

  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> +lxqt-meta-0.9.0.ebuild,
  metadata.xml:
  LXQt 0.9.0 version bump

  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> lxqt-meta-0.7.0-r1.ebuild,
  lxqt-meta-0.8.0.ebuild:
  Update deps wrt category move

  30 Jan 2015; Michael Palimaka <kensington@gentoo.org>
  lxqt-meta-0.7.0-r1.ebuild, lxqt-meta-0.8.0.ebuild:
  Update SRC_URI by Michael Vetter <g.bluehut@gmail.com> wrt bug #537032.

*lxqt-meta-0.8.0 (08 Nov 2014)

  08 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> +lxqt-meta-0.8.0.ebuild,
  metadata.xml:
  version bump

  02 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> lxqt-meta-0.7.0-r1.ebuild:
  make dependencies more precise (preparation for LXQt 0.8.0 release)

*lxqt-meta-0.7.0-r1 (29 May 2014)

  29 May 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +lxqt-meta-0.7.0-r1.ebuild, -lxqt-meta-0.7.0.ebuild, metadata.xml:
  Add USEs for optional dependencies, closing bug #511786

  29 May 2014; Manuel Rüger <mrueg@gentoo.org> lxqt-meta-0.7.0.ebuild:
  Add ~arm keyword. This was tested on Radxa Rock (armv7).

*lxqt-meta-0.7.0 (27 May 2014)

  27 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> +lxqt-meta-0.7.0.ebuild,
  +metadata.xml:
  Initial import from the qt overlay, thanks to Harvey Mittens and Davide
  Pesavento, see bug #509946