@@ -4,26 +4,26 @@ Hash: SHA256
 EBUILD lxqt-meta-0.7.0-r1.ebuild 1523 SHA256 2ca50b8679e3700d26a9b9a924f8837bf80f8d54a90032b19ee6bca8b44ee02a SHA512 48255c1ae0a02d8bf8c7c3d2589604c644707b4f073a20195fed4e13b1aab1333ae14e81e648d5cf06ef3b884865db234b913149aa112e0076f2306483c947d8 WHIRLPOOL b158a187c1f5369ce541725819dc703c68786373bddb96c91c86a564d4bb65be118198b084364bddf195c89718a335c5beec220af9527702d2ef3e94f578da9d
 EBUILD lxqt-meta-0.8.0.ebuild 1332 SHA256 e22b3c1d0959a179410aa04f32582da7bb5582a9810e37a4b3e2e82e695ce418 SHA512 d22462f4cc6e05233136653ba5af9ae672657d5e8d1f88fab47ae69edb386c82c39c215b6a2776f376f90f36c04718731d310f18a76c2b36f415c88cc0f40f2a WHIRLPOOL 184add1ca972ae1b8eeceade4a86130c46f35447b874b4ef2c1aed5421de2add0f62673c613aa2ae0e6e5c203f0308b360fdfba9b42032ad0713bc830a30ae56
 EBUILD lxqt-meta-0.9.0-r1.ebuild 1376 SHA256 90eba10b398a86cc1e2994d03f1a38281d49281cbe3aad581f42fc705ad3aa66 SHA512 e4f73630dcbaa7e597a1910cff985f1a42a43550d0a58b036c1cc15f61853cd3ee8103f0c15876dd466410a82f6c288fc2dee360a98d065b16d2c5cf938c1731 WHIRLPOOL 2e0d9ca4c93d0ed4684a8f967ef3b55a6c221fa0e6fa7e736ac65f8e1e4a6d967d4326e3c6fcbe04905d589fbe038ccef7c2ab3f79b2c1cc8963737efe0ec012
-EBUILD lxqt-meta-0.9.0-r2.ebuild 1620 SHA256 51c72e8d5c15f773f39b2b38ce04c995c699243b18e92589cbd709bf79719871 SHA512 660b86ef4af9369bda596e2840170b6289d768428cdf43c03706d5eeddeab8ce5768979ae71e6199e696fec361daadf577f2253e068f1656cb15102532729601 WHIRLPOOL 63952459e83997885dc84d6833e4dcc5f7546176f7f91c77a46d7a6889f2dd70c70f7a1eeebdd10172282f946cd09c2a36837ccbce27f5e16fbd64769ff286de
+EBUILD lxqt-meta-0.9.0-r2.ebuild 1630 SHA256 59e0f6c2f865c62c7ac8b672015afcb4c858d852f49692b83225e1a87068df00 SHA512 2ef8d1f7f6040d5746a09ed3ad9dbee0fca3cb647eb72b4c29d81e327ead77e50189daa1316026d4d66e2c2a1000924d2df98a665bd32da2603a303f0a7e2b36 WHIRLPOOL f53f7201ffb5f970b07cb4339507ad58091f9aa57444ea89620b99ee37c5337bb8fb98328d2083eba284d5627004059ffcbe3aeb5b53cf6be4e23a7a3abed772
 EBUILD lxqt-meta-0.9.0.ebuild 1374 SHA256 fa7137903580cb4a6030bc97f92a1280a49095f4ed61e6f350c6c806bce6f64b SHA512 db75ed85d111b777230253577a29c3ca51267154f777fcd4d4ce3a285c1077793aba1cc6442623f745e2dda806fba1b247ffaed21f1ebd3b0fcad44e6276beb1 WHIRLPOOL 0778d124dde748f94bc0268cafee793143ad8fc3ef9ce3fe1da25703fea68f4c5d3e7f13285d881b15f6960e36a121db780cd3d368703c8250fe48198d255e6c
-MISC ChangeLog 1954 SHA256 1a227a6eff532d4da0136905e3e051c6ab7d393cf8d3436255d03ad247cb283c SHA512 0fc3174faa8e591c1587b9c2c1b5de2ff9ab5f2c4e2bc9c284c8bafa4719bcacb59696bcaa820093cdbfd81cbdb57e1d50f4c2bfa434a7540af0e064f348343d WHIRLPOOL d6b09eeecfac4311048fe0446432924dc4c19527bf7a24d08b15e621414ed2635949d5adc3b41a92534fae8c28f0b2b59c414b8d29064ed214f36cacbabec5bb
+MISC ChangeLog 2103 SHA256 c2668f9a46d30e9aff9f9db4930da26586a9fcc82ca27c55be19894c980599a5 SHA512 64eef00d13410ee71a8d19ac1cd3bd8ea1c8db8fa0f1a50ca6b9567614e36fee3f257a9264067bb5aa60dd0eaab159ef18dd7a1d377a02f8adf90b60af13b464 WHIRLPOOL ad25488302741158072de389adab9e0adecc1f2540db8c732480e21e83d006ba90dfb50a5e5ff29795dfad2c02d19be4478f0bea229ec543c4c86317a8ba294b
 MISC metadata.xml 1039 SHA256 05df274e78bb50c16dfc1c7d469c18f4ec80782cd6758f2e5ec72631bacaf478 SHA512 8b7e71832c169e0f73ade0190bb661f455b548e4d738bfe3653efae6bde34db78bdaf81dd7ffcd8807d0179f119c58e0bd1da02cf6530dea2956d8dcca290196 WHIRLPOOL 5bbaca1dae4b6a86a65ac84a8711f7f7653b35a051ae791f3330549a07c7dad4ed2967f6b839faa4f1f3c99f54f9e4126ea1e11bca646438f4398aa2e7cfcdf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVBPmNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFO6tAP/2NvwhgjrrpNE9vK1CwHjrq+
-JU3mTwym/2T9lbbZCkiiYVXpmNZTi33ldSpkNEa0GrLEE7UbgYcMz8iwRsU7o96o
-KvdGrQStu8X+OlHsFCUH+4YiSxsCetyebx1Xo3m0N4yQ08tG5ttRil0QmCT6/T/a
-tvmeRYzYkZBxO+e83YpzCA/8lTJlykl3ezqHpRSK3klENZw85WawObZFDY1CWCq+
-6S6N3d9BRP9jcT4zmsdXBU3xSljrfLMVm1a4ViOM99fBpYy6YfBbouTE7ICupAm4
-3I2Gwpu/0TQIpkXSSSyP2hco6BH1zw4Xad6/V8gjfpmYSvEQiQANBekT7VYZ1MmL
-MttFg+HJd5Tq1nQ159XM4xzVsNib4iTGQsHYezRpqXLIh0nTJy8U86b5k0+02wGT
-ZR8FE4u6q4hEQKIWTKZldMIR80Xu4cdgkY/Kr1OyeE/5ZA7LAHRk+loDRuKno2eJ
-qQZhllfXl/QS7LVDr3X4d5b8fTV9heBMg3O6g3JemeXJT6N1A2J7wI+ghyyr1AbR
-EC0wJKLLggsmrfx7niUffAuyw79AW/P7Ir/2cg4WxPJ9rGlsyUJwrj+M7stvG/WM
-AdhmMVFyLVCQjj3xBIfcwgvEUhbeT2z7g5xFgGXgLQeYinNgYA7hyOmT2Y6j3ria
-R4qH1+YRQ4OUYVF2X7Sw
-=G6hh
+iQJ8BAEBCABmBQJVLnwXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCNUJBQjhDOUMzMUI3MTE1NjcwMjIzREMz
+MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvtigAQAIXO7AL1Bx5EoyRZ3LhFDu8u
+DCh8lMLK1AEa4+AlihbwFtRe6v/LpJuyDeSXGz6NNfFb0MAC9JqITrFQiMGHhdoZ
+iTn7RpQuef/gr+NzE4K2B0IZgGY4skc+sSKv7e5xkI3u0iUvYwttDnBq29uvSUey
+GRSF6I9kcKBvOzv9obSnbIT9G1x7LkWCLgBTsFT7SGfqZ6x244eO+XMcLQwheZK5
+LljePoaLEpNI0JyjvT5xqydlAeFRoxiN2EcQm5b2C3u7uT/RoooOip43somQ3Pr5
+e3IK9BcN4XQLmCaUv9pKL/ILxL74PbWYT/4AzSdGpqcEHaEeKQbyXTFbDTdIhCEG
+OSKMTgRvZSrcvPGXh7ecrYZV0LDntq4YcdHi8KuHmCCba9nJ9TcVB3tl7wnd/VK/
+UvzAuuBXjGHfe7gmdZyeW0gxjgy5ePrnj5d5BiAUtENuB6k7QAB/JnFaRsb+XWKh
+H4752QRRfs1V8zN7toq7Aa5jbRIYtkE38PnKYFJ0SjxjVg8c4vNPERNmIuX2HLF8
+xR3QFrHMO2kRR5LAMhPRKzjY4x43cBFaiYnWfzvM08pUjydr3NM0gISmMYl4tcOA
+QUhaRA2YuSFbJyf4nI42QawI4fJzoAdKkL/SnpItcYPnQHB6DVTqPPVMJTEiDBKN
+zpNd8rE+QknrbNGgerVp
+=cSBA
 -----END PGP SIGNATURE-----
