@@ -6,25 +6,25 @@ DIST lxqt-runner-0.8.0.tar.xz 195808 SHA256 515d55e6a253550b7ce84e6f2c3f9d47ca91
 DIST lxqt-runner-0.9.0.tar.xz 192812 SHA256 7d9d4d85acb2a9e17892ca41637a677939ef7788df5cd45ba44d178ac066439a SHA512 099f434f0cf89a4b338bb7d2bfbee2ebb2808354ac377c4093bc29a01457a6b3539260e34ef72e5f41bbf9b34d045102fc5ad5be88b69ac181040f917128d3e1 WHIRLPOOL 267036992c67db78e87a8341e2c47cfa4b238983aec42d40e8dd652e0aa82a7f4c84828a08482016c60ee012c53635d2917d30ef69466683b823b3ec07570cf1
 EBUILD lxqt-runner-0.7.0-r1.ebuild 884 SHA256 66336f65fc52dac2924b9e6814797b1588b52f735c1574b2116ffec5d4b80870 SHA512 f776fa3c196746968eb8b9a4940e1bd9be1cc72430f5b18160df5e501fa504af6bb0138b07c430958f56cb10de0aa58e22ed180806b08bd73cf252436640058b WHIRLPOOL c954ec6a9cb59700cdb1b6ce83b41af66065317a7c4932e3d95a99b3fa738bc2e1c5297a09af48be0ffd4616c2bb0863355acf6fe9843d658397990648e53980
 EBUILD lxqt-runner-0.8.0.ebuild 1052 SHA256 215c4beb67d01af5044f91a797c57cf2ecf98727bd2d69a7bc686bd8868736f1 SHA512 069f1ee4952df8e455352fee951f8aa5f8b91ae35dc367903d618a5c860205b6d7232de4d4f5a8ffa0c2cda404f8d1d2472d6b77f214d87ee7f8827fd0d1cd09 WHIRLPOOL 64b2d96142117f56eb15ca8aefd6ba9718bb06207469f8a41b1b19155d874084374f3985b8268432402c3320fb197978f185181c1482d58538a947c4e8657465
-EBUILD lxqt-runner-0.9.0.ebuild 974 SHA256 c830a75856728857bdedd5748b6fd5d6216f70455bd9edd1cf019387e0dae3a2 SHA512 c665fadf4d29857b64be0790fbdbf9bf8741d74b55dd9dabac203bddffe0386ec1d821aa04770d8fad30b841457c11b286ce81719e8a93cfd2b1b88747354c93 WHIRLPOOL 80b95541627c742d648a92c2afd65a80e603336f484ac5bafc16a7902d8bf39be5a9a36a8ec02b772e2f9a98a1df73d994f544cce4dc347b0aada6c2a51f1b6e
-MISC ChangeLog 1435 SHA256 00b627a95f418fdb61f9904344f34ec74aaf1b1d0327ebfce2ae70dfe8671f54 SHA512 a5534fe174e71221737f675502795cb0a87594113537e8eb89064ae795cfc5584c950978c1963a74ed7bea10001e284466f65ddded0bd97698bea8c29f2c673c WHIRLPOOL ccde5bef2a9ef2cd58fbbf76943c28bec9e5cb292d2ddad7d8171cd3a9d1500109ffeb47d17a84850cfe6ccc8af0b2bc6fe793c2a24ec5f3088dc25784e32477
+EBUILD lxqt-runner-0.9.0.ebuild 984 SHA256 62989017c8cbe40e32ab18d8c24280872e9e298f728cb66b4d9841cafed76ce2 SHA512 7d109d8107f63cd39ad9dae06cb7490b0b1eee33c6e1c745ac12582cc0ec3f8a47b413aaaf5b28cceed9e582505dcb83fa3d676e0b4e65ed5d85658dd271b00b WHIRLPOOL 61dda4e0a7f139d795fde3da91b738f072432ea973aa5b85292cb69c9dc1409da6db9970a040b58b032257af255df5b9577fb3011860b3b60066112ec7169ea2
+MISC ChangeLog 1583 SHA256 6893496cd3ac1203255fde135d2171339e468c62e232fc6552b7ce7b26479416 SHA512 6d6756e2069256da753cbcf45721ac3b290592c59aaee2b5baaded0bba1a3bcd7ef8f22d6a0763ed3d4caceaf89d75a66a62bde72c99f9fce9a7ee59e91c3786 WHIRLPOOL bfa840e056365efaa2dda40f312c5ac818100dae3a454f99b7419b3c9c165f5a9a73b4dec2b36f408d0cae584111337ccc04fd34e2c58bad919081b28f07cd5f
 MISC metadata.xml 263 SHA256 d23df106b61ed123144d9d24eea822badfbe6cb7d8d4ec61215af73b4c8f1fc6 SHA512 9f99b13f568e1cfda82dc35cd0b95fba565d5f18909db7b0d7dff75273cf4076a68288768ee5f65a70485833971fb3e511919a9e80d09e0d96f3a38744435d3a WHIRLPOOL 6bfa4c8737764e7450195f3ffd2e8fe8531ad44dfa02b0d7819678eeb7898280f07ed13ac87e0158abb6d9b804ee617b7683f73a4cd17db822419eba55fa62c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU2jxCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOHB8QAMeE8oTFWELWdIbsI+/cx8Jf
-o8oQQ3AuCZsuCFmRFet0SM+T1PRZEarplQfhDo42eOPcKNtpPFRd3slLNLZqZRxJ
-6kB77wNjlnZPmX+V8lyT/m26bj1UxOkctbe3js4OpVWMdY9tpDRb5rRdl04Gf54A
-rN90ujgZM7d/76XEx4usicTtqfUGxL+6ChuIl4HahUNYPu4/lDT0moy6DmeZ9p0X
-l/1RomgV+QWh5rYjk6WDOARG06bMxaJ5Dg5iBwZyGb+2p0CV1d94hd7ftDKGKlCw
-on/8l0LE0672fvAszhn1vfuKtEEWXwYW2P1R8IVxwip5QznwXfYOJM2CU804cUTZ
-Rm+2AS+0zBxch2Tx/UTeSEuQ4CNvarO7lbHbzsfmIDcOgabROkcWWFp6y1mh2Yno
-Zmk7glXRG/hRUthJjRibwEGmdZ0vjsWMiH4z1ylJqnp8AN1kJc4XUByUln+hSMSo
-/Ch4O2Zz0rFMgr4lTaBEHaDdWB7vpMLo1b0SVJoXDDZo2b9cMbQH/QeIWL5/m6iP
-LmgTToNWAPOrdpWe8E4f2gB6jrw60PWEjN/sGXM1PQWqoihFjbrV8cG9vb1/I0Sj
-tBUqLYowwktBuvG9QW5T23A5xsgl5uy9PBx8WDa/29VeCJGo9cTUYdjlPX+oHr0J
-PuHVE6EAngKUdA3L7KG5
-=BXkR
+iQJ8BAEBCABmBQJVLnxlXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCNUJBQjhDOUMzMUI3MTE1NjcwMjIzREMz
+MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvtyTUP/2V87SjaiyIUl91n1IZFz3Ic
+XuQHrcJW1Fq+xuhqE48HMP3EDdxXY5QV36nqrb3WdMfdrTsHU4DSQ7ZbvRa49zMU
+Xj275ztythEK+MuaNL0BKwiL+jJAyQVq6Kxr5481ClSRPwA755lDD11wJK6FLpe1
+GpctjQafm47hPied98V2SwB1KlcR2lVhAur4iYBbR7HOGLtf1OPerjIsfmyd6Mfz
+OCe5VtyjhnBkDmyJaqyxUd88EfJ+ZHzo3VBN6kZdFVttUup8oV+UfqeQHr5yHluA
+sVmQ5HrQ8VbbrlnOGvV7ou9Wpu2c5oEoKfbtmoilIq8EE736S57LeLYFb5i7DHpb
+yxZj2k17tNoc4UIqsP6kkESSO8pLYt77AuuHSWRXYZoKsLn5+CaUODU4jb+N5tjT
+O4iS19R76odOT0nzbcwp3gI/RAMLGxBb+IUU34X3vzi2Q4WB9WkYkJMDF1PigxZf
+8IaRpLNoXKoAKXYTDxeDQPfYOFymHxQ/hFiEwtvMNJQmXfz4fpQtaV6pzJIg2sIa
+kIalS8hcyMeUqgfYr3iY+EDZxSHU7uNxlXAXmp8P9S43QEKG2Qb5YDisvoJH84Ay
+SAJ1OFRXOed2qJf0IdJjmYiQLWOU8lo/VZFVeoNYy//PMAdbCzhU3R4uEoWFIrnU
+LuMmRlP7Hc4DitMoUcRL
+=QgCw
 -----END PGP SIGNATURE-----
