@@ -6,25 +6,25 @@ DIST lxqt-session-0.8.0.tar.xz 70796 SHA256 bab662d167d6b718bfd30122f0c26d786469
 DIST lxqt-session-0.9.0.tar.xz 56556 SHA256 c543ffb938e230c144399b59c99c53ee69fd0b37ff404a02576ce1179a551d06 SHA512 d0f5626c64ee6b03ad017df99cde09c8a27c1f5de658e39dd5346d79605b4f173bcef8f02d9d9b5c9cbed8c2e8c30b5202443fe229ce5bf3258143d312bf3183 WHIRLPOOL e8f6990ebe5cebbf4af939394c41782fb0034dd3381c07f0a6d9442dd50a1351191c27a9b94e01df49d0749334bdb0a37597fd51fdbf27633efbefe97192f502
 EBUILD lxqt-session-0.7.0-r1.ebuild 935 SHA256 e04b3cbe171a477b2e6ecc4fe73686582711c36a734fb52239f45f6e4c7f9bcf SHA512 562ae07fbaefa3e0d907f08e61eaf606f3a4c340a1ac465c59f7cb2b70178d512ef690a1e701d3fd5175b6b888b86934f231b1923235762570340aaac845b245 WHIRLPOOL d0a60e1e8c0711a9bb384ebe9d12c25de6ee3111ed19cf545b1b5e41c9f7bc11f73c8db6e2f16ec1b9ae1d53fc742a3d102cf3bf5dbc0d54d2da579b0dea4c00
 EBUILD lxqt-session-0.8.0.ebuild 1086 SHA256 c2e479840af5987c9b25454be72a1d25bf53c486f4e16757fb5fdf30f0aed334 SHA512 91da5c4f9908f8f40b621ce69f41c927dcf8091ab35ce0675d6f1223f15785ce6d03cd396332a16d374c94ecd03be9e6abe3c9c9f8214c5c56baabcf24ea00f7 WHIRLPOOL ae7269940d06c7c80d1038a871797a1304b79029b8771539a9fe11bd1c24ce8f8dd4f9d6082fcac9f4b61a21671e66e12428a38ebfdf7354bbe8d605de9dd078
-EBUILD lxqt-session-0.9.0-r1.ebuild 1032 SHA256 034a8a7bf10da12e3dd4ce8b5f18e699a8a0018404ee09f8d02d533467a96407 SHA512 0b82755f6f1a67a716c56b69f7f20f4f9b9b966e333a5c5fc332a36164ffb08330ee6e886b8c15008ba78d753d31e17f4266ebf053dda5666f73178a211bf67e WHIRLPOOL 52eb1314ed75a1850a553f5b074b5bc07204f76873dfc59bb7f636205d4d60e6c7724c1413f4e0a5ac86570d42b14ee7c194877d0c79a5acd45763a5d9f60022
-MISC ChangeLog 1905 SHA256 8ff4abff26030deb8ff111c00921a9203c5a7a197aaf69c22462d3dbcbb173c6 SHA512 36fcc8daa400ccc16bddaade51f91bc82801af99f537494efafb3fc20f24a2deaf2ac6cbdb5d9627df6adbbf6884dcd53aeee5101984c77fb5a3a65ef3aa5606 WHIRLPOOL bba657d3254b02f3d87d974a63c8fb5b6cd2168675b4848dcacfaf74c4d712ff574a3a13617094ab6f7dcc1dffcc8811d756c432a37d9228ccdd014252763046
+EBUILD lxqt-session-0.9.0-r1.ebuild 1042 SHA256 f75970a8f45a2c124ce26e69fe1e731d43134508b873f26e98a012a0428b0b6d SHA512 3d16e4ce61911f4ed680739cf4349faa44c362ae765d9e4ec701187ed0e7fa2e944924da973bdc51bdfb04a8e7ccc40a3ad661de4d299eab40161aad78f57a70 WHIRLPOOL bfa6a2fbab9f8a2299a3e511212da68835c24306a56eb6947b5cbbe16837021c5cd35ac7b4ff9cb200d152b6ca2424ec570a68c291c84d935865fc78b76c5895
+MISC ChangeLog 2038 SHA256 bee80a46a5b4552455fdd6cb8c0b28e5d51cec512c66d94829a5502215f5872b SHA512 ed8c697c9c4ba55a1669554225655fa2a16cc773f7acd6d9727f4832afd538ed97a922b16ca1df7d63ea2808930f4690d90ce17712b70f55afd472a03331c8ed WHIRLPOOL 27d3a4a051fb59482190052f3d149e8f5769f26d7aa5f205a7aff1a150425b58830a1a95978e91d3634c270438c0faba306e32baea5dea03dcf7c8f52d2416f6
 MISC metadata.xml 263 SHA256 d23df106b61ed123144d9d24eea822badfbe6cb7d8d4ec61215af73b4c8f1fc6 SHA512 9f99b13f568e1cfda82dc35cd0b95fba565d5f18909db7b0d7dff75273cf4076a68288768ee5f65a70485833971fb3e511919a9e80d09e0d96f3a38744435d3a WHIRLPOOL 6bfa4c8737764e7450195f3ffd2e8fe8531ad44dfa02b0d7819678eeb7898280f07ed13ac87e0158abb6d9b804ee617b7683f73a4cd17db822419eba55fa62c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVDmETXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOt/8QALliSi2Irn8VU1j6ubu6vrik
-xxATrGxiG3WNu4HINuNTyW/UeJCanA7byQus7ipV/Ki6NTXda0pYSXHU/tfqRrWv
-S59yTkjzudaW0eZnfwmP56n6Lmg1A/flBCYGvZtFPvI/z99yNx3KwNZHMGSFXAWl
-R8uWNW3lEoArnCTQelOKJZYHN4UT+23xzIkwH7b4/6RttLtE/X68w39y0gMCYncP
-m0hCnhvX8D1niGVSe/XKtn7qbyPcbJTG0klhuaiEyUY+5dHZlC7acZFYSqfKtEEq
-0xZkwvmMAQurqpaC1XIbFSYS5Cdghx+er4r7/Q7DpEj+GIZmLMU4tzn75LJHGL5g
-c8hiWfYewaAXqf7UO8oFRHVBqmPY3o82oaF4T/xvzOjponKV1fGctPnvTdbkKueH
-IBdTsjXfaUR9fc1kV5kO7uuUhrBwwzyvfaUgiVLerHTkF5Gp0BJ3kdmVaaPIkoak
-b3Ztuu1hWSf6VMN/5e8AHqL/4J2k+hJ65Si5871TC5f25mHm2IY9jk3N1wUZDgR5
-uV8Es97+CYL+bEEEYs/UJibKeF2AkSAG6QTXk+/fzHWHlVsjRLVq7osOWoDtUdKE
-Pg2pdWlvMeZ6OYTneM7bF8BfqB5orvwB0+J5gsH4+9gtW8yf6Igak3bbQZjxjbHl
-whfJbAuFKfAc3WX+zh0r
-=gFFl
+iQJ8BAEBCABmBQJVLnzOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCNUJBQjhDOUMzMUI3MTE1NjcwMjIzREMz
+MUFBRUE0NzU5NERCQkVEAAoJEDGq6kdZTbvtYQIP/jJdos0Yd2d0uZ8Jyy0zgdDc
+7KspndCtnZe8aCjp8ykL8zn921nDfCJmmjZjfnvII46YYACZ3PJtpXn4lgyXzKMJ
+SCXh4h+Pvc9QLhna3hm+jriWVYvRU3B90MriSgiv1yEJhtocKieinX2IH0hnnhx+
+Xeyffj+4e13QMGnaMd2KWQyar209ZaVqEqJBY3sFrdBPdjsNAUxEnIlCO+2OPtNU
+5Q9ZRAtKwXylkVffqsAymwlf5q8VPGi+B22Z6BwWxms+qMvIRO6HWtkhDSyLwKto
+rGyVuc1TiYmivoT/ImWo+1H0J5CaDUwslJOMrS5tOWz65GTCoblxq7bva411zXzz
+q1Honoh5RVxjmsWslKZCLf1CeUAxexHQrVbtU2lJq8dyBxEKkwwrMeo6GnoQ2Rdm
+FcSGQbrv309RUlX3KuXvWrKpgNzAJ6H1e9Uq/oonMjU2O5s7BN0+j5mqLqbSHVnE
+emhInNZ+GSWxBl0vj9Ot4RsT0isej/oQ95eoBKH/hA8lWPoFkTMiUU+1ELJ28Wbn
+NeihAC/NF7lIK/F/dnMIQpP3WX342CT6eYmOLLXi7NhtNjGtzR6I6VqdxBZ+gkY0
+wz6JIpCczkmbsHiD63fJph0LX3zAqHnha9OVCQ8xGJRP5v5maBFqmTr89ot2llG/
+vTcI4JdzjJmDPrttsVfK
+=cxLm
 -----END PGP SIGNATURE-----
