@@ -3,10 +3,10 @@ DEPEND=dev-libs/glib:2 >=dev-libs/libqtxdg-1.0.0 dev-qt/linguist-tools:5 dev-qt/
 DESCRIPTION=LXQt quick launcher
 EAPI=5
 HOMEPAGE=http://lxqt.org/
-KEYWORDS=~amd64 ~x86
+KEYWORDS=~amd64 ~arm ~arm64 ~x86
 LICENSE=GPL-2 LGPL-2.1+
 RDEPEND=dev-libs/glib:2 >=dev-libs/libqtxdg-1.0.0 dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtscript:5 dev-qt/qtgui:5 dev-qt/qtwidgets:5 dev-qt/qtx11extras:5 dev-qt/qtxml:5 kde-frameworks/kwindowsystem:5 ~lxqt-base/liblxqt-0.9.0 ~lxqt-base/lxqt-globalkeys-0.9.0 >=lxde-base/menu-cache-0.5.1
 SLOT=0
 SRC_URI=http://downloads.lxqt.org/lxqt/0.9.0/lxqt-runner-0.9.0.tar.xz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=9a04072ddb4e3332af95fbad336e25a4
+_md5_=cd4c96670fa8d9e8cdf22a22aac1bc26
