@@ -1,6 +1,9 @@
 # ChangeLog for lxqt-base/lxqt-runner
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-runner/ChangeLog,v 1.8 2015/02/10 17:13:37 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-runner/ChangeLog,v 1.9 2015/04/15 07:06:09 dlan Exp $
+
+  15 Apr 2015; Yixun Lan <dlan@gentoo.org> lxqt-runner-0.9.0.ebuild:
+  keyword arm/arm64, tested on cortex-A9/A53 hardware; support lxqt, bug 528676
 
 *lxqt-runner-0.9.0 (10 Feb 2015)
 
