@@ -1,6 +1,9 @@
 # ChangeLog for lxqt-base/lxqt-session
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-session/ChangeLog,v 1.11 2015/03/22 06:28:34 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-session/ChangeLog,v 1.12 2015/04/15 07:07:55 dlan Exp $
+
+  03 Apr 2015; Yixun Lan <dlan@gentoo.org> lxqt-session-0.9.0-r1.ebuild:
+  keyword arm/arm64, tested on cortex-a9/cortex-a53 hardware
 
   22 Mar 2015; Ben de Groot <yngwin@gentoo.org> -lxqt-session-0.9.0.ebuild,
   lxqt-session-0.9.0-r1.ebuild:
